--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
                 <div class="row">
                     <section class="about-me line col-md-12 padding_30 padbot_45">
                     <div class="section-title"><span></span><h2>About Me</h2></div>
-                    <p class="top_30">I am a Vietnamese developer at akaBot, a company that provides Automation solutions for businesses. I'm a graduate of the Hanoi University of Science and Technology, where I studied Electronics and Telecommunications. My passion is about using RPA to automate business processes and improve efficiency. 
+                    <p class="top_30">I am a Vietnamese Developer at akaBot, that provides RPA solutions for businesses. I'm a graduate of the Hanoi University of Science and Technology, where I studied Electronics and Telecommunications. My passion is about make product that help business processes and improve efficiency. 
                         <br>
                         Some additional :
                         <br>
-                        - 2-YOE at RPA and Java Backend for UBot Invoice Product
+                        - 3-YOE at RPA and Java Backend for UBot Invoice Product
                         <br>
                         - Knowledge of data structures and algorithms
                         <br>
@@ -143,7 +143,7 @@
                         - Knowledge of desgin, photo and video editing
                         <br>
                         - Good at problem solving
-
+                        <br>
                         - A responsible, straightforward, willing-to-learn person
                 </section>
                 </div>
@@ -157,14 +157,18 @@
                                 <ul class="timeline col-md-12 top_30">
                                     <li><i class="fa fa-suitcase" aria-hidden="true"></i><h2 class="timeline-title">Working History</h2></li>
                                     <!-- a work -->
-                                    <li><h3 class="line-title">Java Backend, RPA Developer - akaBot RPA Products</h3>
+                                    <li><h3 class="line-title">Fullstack Developer - akaBot RPA Products</h3>
                                         <span>2021 - Present</span>
-                                        <p class="little-text">Working in UBot Teams as a developer for Invoice Processing project</p>
+                                        <p class="little-text">As a developer for Invoice Processing SaaS UBot product – an automated invoice processing software using RPA technology to helps businesses improve accuracy, and reduce costs.
+                                       </p>
+                                       <p class="little-text">Tech-stack: RPA, JavaSpring, C#, Javascript, Agile
+                                        
+                                    </p>
                                     </li>
                                     <!-- a work -->
                                     <li><h3 class="line-title">C++ Developer - FPT Software</h3>
                                         <span>2020</span>
-                                        <p class="little-text">Intern</p>
+                                        <p class="little-text">Intership</p>
                                     </li>
                                     <!-- a work -->
                                     <li><h3 class="line-title">Designer - SET HoChiMinh Communist YU </h3>
@@ -599,63 +603,73 @@
                         <div id="filters-container">
                             <!-- '*' means shows all item elements -->
                             <div data-filter="*" class="cbp-filter-item cbp-filter-item-active">All</div>
-                            <div data-filter=".embedded" class="cbp-filter-item">Embedded projects</div>
-                            <div data-filter=".code" class="cbp-filter-item">Code projects</div>
-                            <div data-filter=".design" class="cbp-filter-item">Design projects</div>
-                            <div data-filter=".personal" class="cbp-filter-item">RPA projects</div>
+                            <div data-filter=".webdesign" class="cbp-filter-item">Web projects</div>
+                            <div data-filter=".ai" class="cbp-filter-item">AI projects</div>
                         </div>
                     </div>
+                    
                     <div id="grid-container" class="top_60">
-                        <!-- a work -->
-                        <div class="cbp-item webdesign">
-                            <a href="portfolio-detail/work-01.html" class=" cbp-singlePage">
-                                <figure>
-                                    <div class="icon">
-                                        <i class="fa fa-clone" aria-hidden="true"></i>
-                                    </div>
-                                    <img src="images/works/work-01.jpg" alt="" >
-                                    <figcaption>
-                                        <span class="title">Babel Admin</span><br/>
-                                        <span class="info">An admin template design.</span>
-                                    </figcaption>
-                                </figure>
-                            </a>
-                        </div>
-                        <!-- a video work -->
-                        <div class="cbp-item cbp-lightbox motion">
-                            <a href="http://www.youtube.com/watch?v=bpOSxM0rNPM&rel=0&autoplay=1" class="cbp-lightbox">
-                                <figure>
-                                    <div class="icon">
-                                        <i class="fa fa-play" aria-hidden="true"></i>
-                                    </div>
-                                    <img src="images/works/work-02.jpg" alt="" >
-                                    <figcaption>
-                                        <span class="title">George Motion</span><br/>
-                                        <span class="info">An motion graphic design.</span>
-                                    </figcaption>
-                                </figure>
-                            </a>
-                        </div>
-                        <!-- a image work -->
-                        <div class="cbp-item cbp-lightbox photography">
-                            <a href="images/works/work-06.jpg" class="cbp-lightbox">
+                        <div class="cbp-item cbp-lightbox webdesign">
+                            <a href="images/works/work-1.jpg" class="cbp-lightbox">
                                 <figure>
                                     <div class="icon">
                                         <i class="fa fa-picture-o" aria-hidden="true"></i>
                                     </div>
-                                    <img src="images/works/work-06.jpg" alt="">                       
+                                    <img src="images/works/work-1.jpg" alt="">                       
                                     <figcaption>
-                                        <span class="title">Amazon Travel</span><br/>
-                                        <span class="info">Nature photography work.</span>
+                                        <span class="title"><b>UBot Invoice</b> (TPBank, BIC, Daikin, Eximbank, ...)</span><br/>
+                                        <span class="info">An automated invoice processing software using RPA technology to helps businesses improve accuracy, and reduce costs.</span>
                                     </figcaption>
                                 </figure>
                             </a>
                         </div>
+                        <div class="cbp-item cbp-lightbox ai">
+                            <a href="images/works/work-2.png" class="cbp-lightbox">
+                                <figure>
+                                    <div class="icon">
+                                        <i class="fa fa-picture-o" aria-hidden="true"></i>
+                                    </div>
+                                    <img src="images/works/work-2.png" alt="">                       
+                                    <figcaption>
+                                        <span class="title"><b>CaptchaSolver using ComputerVision</b> (akaBot, SCB ...)</span><br/>
+                                        <span class="info">Using Computer Vision for bypass captcha.</span>
+                                    </figcaption>
+                                </figure>
+                            </a>
+                        </div>
+                        <div class="cbp-item cbp-lightbox webdesign">
+                            <a href="images/works/work-3.jpg" class="cbp-lightbox">
+                                <figure>
+                                    <div class="icon">
+                                        <i class="fa fa-picture-o" aria-hidden="true"></i>
+                                    </div>
+                                    <img src="images/works/work-3.jpg" alt="">                       
+                                    <figcaption>
+                                        <span class="title"><b>viGuessr</b></span><br/>
+                                        <span class="info">A web game base on concept of GeoGuessr, with location in VietNam</span>
+                                    </figcaption>
+                                </figure>
+                            </a>
+                        </div>
+                        <!-- a work -->
+                        <div class="cbp-item cbp-lightbox webdesign">
+                            <a href="images/works/work-4.jpg" class="cbp-lightbox">
+                                <figure>
+                                    <div class="icon">
+                                        <i class="fa fa-picture-o" aria-hidden="true"></i>
+                                    </div>
+                                    <img src="images/works/work-4.jpg" alt="">                       
+                                    <figcaption>
+                                        <span class="title"><b>GetMSTeamsCode</b></span><br/>
+                                        <span class="info">Tool for students study at HUST, help them can find online class in the pass term with no limitation.</span>
+                                    </figcaption>
+                                </figure>
+                            </a>
+                        </div>                        
+                    </div>
                     <!-- load more button -->
                     <div id="js-loadMore-agency" class="cbp-l-loadMore-button top_30">
                         <a href="load-more/portfolio.html" class="cbp-l-loadMore-link site-btn" rel="nofollow">
-                            <span class="cbp-l-loadMore-defaultText">Load More (<span class="cbp-l-loadMore-loadItems">3</span>)</span>
-                            <span class="cbp-l-loadMore-loadingText">Loading...</span>
                             <span class="cbp-l-loadMore-noMoreLoading">No More Works</span>
                         </a>
                     </div>
