--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>Portfolio | Duc Luu Van</title>
 <meta charset="UTF-8">
 <meta name="description" content="This is portfolio of Dustin, an engineer from Hanoi University of Science and Technology, looking for work as Developer.">
-<meta name="keywords" content="Lưu Văn Đức, Đức Lưu Văn, 1999, Luu Van Duc, Java, Resume">
+<meta name="keywords" content="Lưu Văn Đức, Đức Lưu Văn, 1999, Luu Van Duc, Java, Resume, 0396859681">
 <meta property="og:image" content="https://dustinluu.com/images/preview.png">
 <meta property="og:url" content="DUSTINLUU.COM">
 <meta property="og:type" content="profile:dustin,duc">
