--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <li><p><span>Name:</span> Van Duc, Luu</p></li>
             <li><p><span>Birthday:</span> January 30, 1999</p></li>
             <li><p><span>Job:</span> Developer</p></li>
-            <li><p><span>Phone:</span> (+84) 39 685 9681</p></li>
+            <li><p><span>Phone:</span> (+84) 0396859681</p></li>
             <li><p><span>Email:</span> luuvanductn1999@gmail.com</p></li>
             <li><p><span>Facebook:</span> duc.luuvan.pro</p></li>
         </ul>
@@ -605,6 +605,7 @@
                             <div data-filter="*" class="cbp-filter-item cbp-filter-item-active">All</div>
                             <div data-filter=".webdesign" class="cbp-filter-item">Web projects</div>
                             <div data-filter=".ai" class="cbp-filter-item">AI projects</div>
+                            <div data-filter=".embedded" class="cbp-filter-item">Embedded projects</div>
                         </div>
                     </div>
                     
@@ -631,7 +632,7 @@
                                     </div>
                                     <img src="images/works/work-2.png" alt="">                       
                                     <figcaption>
-                                        <span class="title"><b>CaptchaSolver using ComputerVision</b> (akaBot, SCB ...)</span><br/>
+                                        <span class="title"><b>Captcha Solver</b> (akaBot, SCB ...)</span><br/>
                                         <span class="info">Using Computer Vision for bypass captcha.</span>
                                     </figcaption>
                                 </figure>
@@ -653,15 +654,43 @@
                         </div>
                         <!-- a work -->
                         <div class="cbp-item cbp-lightbox webdesign">
-                            <a href="images/works/work-4.jpg" class="cbp-lightbox">
+                            <a href="images/works/work-5.jpg" class="cbp-lightbox">
                                 <figure>
                                     <div class="icon">
                                         <i class="fa fa-picture-o" aria-hidden="true"></i>
                                     </div>
-                                    <img src="images/works/work-4.jpg" alt="">                       
+                                    <img src="images/works/work-5.jpg" alt="">                       
                                     <figcaption>
                                         <span class="title"><b>GetMSTeamsCode</b></span><br/>
                                         <span class="info">Tool for students study at HUST, help them can find online class in the pass term with no limitation.</span>
+                                    </figcaption>
+                                </figure>
+                            </a>
+                        </div>
+                        <div class="cbp-item cbp-lightbox embedded">
+                            <a href="images/works/work-5.jpg" class="cbp-lightbox">
+                                <figure>
+                                    <div class="icon">
+                                        <i class="fa fa-picture-o" aria-hidden="true"></i>
+                                    </div>
+                                    <img src="images/works/work-6.png" alt="">                       
+                                    <figcaption>
+                                        <span class="title"><b>Smart Clock</b></span><br/>
+                                        <span class="info">Using ESP8266 to get time and fetch News from VNExpress RSS.</span>
+                                    </figcaption>
+                                </figure>
+                            </a>
+                        </div>
+                        <div class="cbp-item cbp-lightbox embedded">
+                            <a href="images/works/work-5.png" class="cbp-lightbox">
+                                <figure>
+                                    <div class="icon">
+                                        <i class="fa fa-picture-o" aria-hidden="true"></i>
+                                    </div>
+                                    <img src="images/works/work-5.png" alt="">                       
+                                    <figcaption>
+                                        <span class="title"><b>Education Management System</b></span><br/>
+                                        <span class="info">Using Winform C#.</span>
                                     </figcaption>
                                 </figure>
                             </a>
