--- a/wedding-real.html
+++ b/wedding-real.html
@@ -8,12 +8,12 @@
 <meta charset="UTF-8">
 <meta name="description" content="The Beginning of Forever.">
 <meta name="keywords" content="Lưu Văn Đức, Đức Lưu Văn, 1999, Luu Van Duc, Java, Resume">
-<meta property="og:image" content="https://dustinluu.com/images/date.png">
-<meta property="og:url" content="DUSTINLUU.COM">
+<meta property="og:image" content="https://ducluuvan.com/images/date.png">
+<meta property="og:url" content="ducluuvan.com">
 <meta property="og:type" content="profile:dustin,duc">
 <meta property="og:title" content="YOU ARE INVITED TO DUSTIN'S WEDDING">
 <meta property="og:description" content="The beginning of forever">
-<meta property="og:image:secure_url" content="https://dustinluu.com/images/date.png">
+<meta property="og:image:secure_url" content="https://ducluuvan.com/images/date.png">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     
