--- a/old/index.html
+++ b/old/index.html
@@ -8,8 +8,8 @@
     <meta name="description" content="This is portfolio of me, an engineer from Hanoi University of Science and Technology, looking for work as Developer.">
     <meta name="keywords" content="Lưu Văn Đức, Đức Lưu Văn, 1999, Luu Van Duc">
     <meta name="author" content="Đức Lưu Văn">
-    <meta property="og:image" content="https://dustinluu.com/images/thumb.png">
-    <meta property="og:image:secure_url" content="https://dustinluu.com/images/thumb.png">
+    <meta property="og:image" content="https://ducluuvan.com/images/thumb.png">
+    <meta property="og:image:secure_url" content="https://ducluuvan.com/images/thumb.png">
 
     <link rel="icon" href="">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
