--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 ================================================== -->
 <title>Portfolio | Duc Luu Van</title>
 <meta charset="UTF-8">
-<meta name="description" content="This is portfolio of Dustin, an engineer from Hanoi University of Science and Technology, looking for work as Developer.">
+<meta name="description" content="This is the portfolio of Dustin, an engineer from Hanoi University of Science and Technology, looking for work as a Developer.">
 <meta name="keywords" content="Lưu Văn Đức, Đức Lưu Văn, 1999, Luu Van Duc, Java, Resume, 0396859681">
 <meta property="og:image" content="https://dustinluu.com/images/preview.png">
 <meta property="og:url" content="DUSTINLUU.COM">
 <meta property="og:type" content="profile:dustin,duc">
 <meta property="og:title" content="Portfolio | Van Duc Luu">
-<meta property="og:description" content="This is portfolio of Dustin, an engineer from Hanoi University of Science and Technology, looking for work as Developer.">
+<meta property="og:description" content="This is the portfolio of Dustin, an engineer from Hanoi University of Science and Technology, looking for work as a Developer.">
 <meta property="og:image:secure_url" content="https://dustinluu.com/images/preview.png">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -130,17 +130,17 @@
                 <div class="row">
                     <section class="about-me line col-md-12 padding_30 padbot_45">
                     <div class="section-title"><span></span><h2>About Me</h2></div>
-                    <p class="top_30">I am a Vietnamese Developer at akaBot, that provides RPA solutions for businesses. I'm a graduate of the Hanoi University of Science and Technology, where I studied Electronics and Telecommunications. My passion is about make product that help business processes and improve efficiency. 
+                    <p class="top_30">I am a Vietnamese Developer at akaBot, which provides RPA solutions for businesses. I'm a graduate of Hanoi University of Science and Technology, where I studied Electronics and Telecommunications. My passion is creating products that help improve business processes and efficiency. 
                         <br>
-                        Some additional :
+                        Additional details:
                         <br>
-                        - 3-YOE at RPA and Java Backend for UBot Invoice Product
+                        - 3 years of experience in RPA and Java Backend for UBot Invoice Product
                         <br>
                         - Knowledge of data structures and algorithms
                         <br>
-                        - Knowledge of some progamming languague: Pascal, C/C++, C#, Python, Java, Js, VB
+                        - Knowledge of programming languages: Pascal, C/C++, C#, Python, Java, JavaScript, VB
                         <br>
-                        - Knowledge of desgin, photo and video editing
+                        - Knowledge of design, photo and video editing
                         <br>
                         - Good at problem solving
                         <br>
@@ -157,23 +157,23 @@
                                 <ul class="timeline col-md-12 top_30">
                                     <li><i class="fa fa-suitcase" aria-hidden="true"></i><h2 class="timeline-title">Working History</h2></li>
                                     <!-- a work -->
-                                    <li><h3 class="line-title">Fullstack Developer - akaBot RPA Products</h3>
+                                    <li><h3 class="line-title">Full-stack Developer - akaBot RPA Products</h3>
                                         <span>2021 - Present</span>
-                                        <p class="little-text">As a developer for Invoice Processing SaaS UBot product – an automated invoice processing software using RPA technology to helps businesses improve accuracy, and reduce costs.
+                                        <p class="little-text">As a developer for the Invoice Processing SaaS UBot product – an automated invoice processing software using RPA technology to help businesses improve accuracy and reduce costs.
                                        </p>
-                                       <p class="little-text">Tech-stack: RPA, JavaSpring, C#, Javascript, Agile
+                                       <p class="little-text">Tech stack: RPA, Java Spring, C#, JavaScript, Agile
                                         
                                     </p>
                                     </li>
                                     <!-- a work -->
                                     <li><h3 class="line-title">C++ Developer - FPT Software</h3>
                                         <span>2020</span>
-                                        <p class="little-text">Intership</p>
+                                        <p class="little-text">Internship</p>
                                     </li>
                                     <!-- a work -->
-                                    <li><h3 class="line-title">Designer - SET HoChiMinh Communist YU </h3>
+                                    <li><h3 class="line-title">Designer - SET Ho Chi Minh Communist Youth Union</h3>
                                         <span>2017 - 2019</span>
-                                        <p class="little-text">Design backdrop, banner and media</p>
+                                        <p class="little-text">Design backdrops, banners and media</p>
                                     </li>
                                 </ul> 
                             </div>  
@@ -257,7 +257,7 @@
                                 <div class="icon">
                                     <i class="fa-solid fa-code"></i>
                                 </div>
-                                <span class="title">Programing</span>
+                                <span class="title">Programming</span>
                                 <p class="little-text">Java, C++, C#, Python, JavaScript</p>
                             </div>
                         </div>
@@ -277,7 +277,7 @@
                                 <div class="icon">
                                     <i class="fa-solid fa-database"></i>
                                 </div>
-                                <span class="title">DB and Clouds</span>
+                                <span class="title">Databases and Cloud</span>
                                 <p class="little-text">SQLite, MongoDB, MySQL, AWS, Azure, GoDaddy</p>
                             </div>
                         </div>
@@ -288,7 +288,7 @@
                                     <i class="fa-solid fa-hammer"></i>
                                 </div>
                                 <span class="title">Tools</span>
-                                <p class="little-text">Git, VsCode, SublimeText, jupyter, Postman, Studio3T</p>
+                                <p class="little-text">Git, VS Code, Sublime Text, Jupyter, Postman, Studio3T</p>
                             </div>
                         </div>
                     </div>
@@ -436,7 +436,7 @@
                                     <!-- a work -->
                                     <li><h3 class="line-title">RPA Developer - akaBot RPA Products</h3>
                                         <span>2021 - Present</span>
-                                        <p class="little-text">Working in UBot Teams as a developer for Invoice Processing project</p>
+                                        <p class="little-text">Working in UBot Teams as a developer for the Invoice Processing project</p>
                                     </li>
                                    <!-- a work -->
                                     <li><h3 class="line-title">C++ Developer - FPT Software</h3>
@@ -457,9 +457,9 @@
                                     <!-- a work -->
                                     <li><h3 class="line-title">Hanoi University of Science and Technology</h3>
                                         <span>2017 - 2022</span>
-                                        <p class="little-text">Major:  Electronic and Telecommunications</p>
+                                        <p class="little-text">Major: Electronics and Telecommunications</p>
                                     </li>
-                                   <!-- a work -->
+                                    <!-- a work -->
                                     <li><h3 class="line-title">Thai Nguyen High School for the Gifted</h3>
                                         <span>2014 - 2017</span>
                                         <p class="little-text">Major: Information Technology</p>
@@ -619,7 +619,7 @@
                                     <img src="images/works/work-1.jpg" alt="">                       
                                     <figcaption>
                                         <span class="title"><b>UBot Invoice</b> (TPBank, BIC, Daikin, Eximbank, ...)</span><br/>
-                                        <span class="info">An automated invoice processing software using RPA technology to helps businesses improve accuracy, and reduce costs.</span>
+                                        <span class="info">An automated invoice processing software using RPA technology to help businesses improve accuracy and reduce costs.</span>
                                     </figcaption>
                                 </figure>
                             </a>
@@ -633,7 +633,7 @@
                                     <img src="images/works/work-2.png" alt="">                       
                                     <figcaption>
                                         <span class="title"><b>Captcha Solver</b> (akaBot, SCB ...)</span><br/>
-                                        <span class="info">Using Computer Vision for bypass captcha.</span>
+                                        <span class="info">Using Computer Vision to bypass captcha.</span>
                                     </figcaption>
                                 </figure>
                             </a>
@@ -647,7 +647,7 @@
                                     <img src="images/works/work-3.jpg" alt="">                       
                                     <figcaption>
                                         <span class="title"><b>viGuessr</b></span><br/>
-                                        <span class="info">A web game base on concept of GeoGuessr, with location in VietNam</span>
+                                        <span class="info">A web game based on the concept of GeoGuessr, with locations in Vietnam</span>
                                     </figcaption>
                                 </figure>
                             </a>
@@ -662,7 +662,7 @@
                                     <img src="images/works/work-5.jpg" alt="">                       
                                     <figcaption>
                                         <span class="title"><b>GetMSTeamsCode</b></span><br/>
-                                        <span class="info">Tool for students study at HUST, help them can find online class in the pass term with no limitation.</span>
+                                        <span class="info">Tool for students studying at HUST, helping them find online classes from past terms with no limitations.</span>
                                     </figcaption>
                                 </figure>
                             </a>
@@ -676,7 +676,7 @@
                                     <img src="images/works/work-6.png" alt="">                       
                                     <figcaption>
                                         <span class="title"><b>Smart Clock</b></span><br/>
-                                        <span class="info">Using ESP8266 to get time and fetch News from VNExpress RSS.</span>
+                                        <span class="info">Using ESP8266 to get time and fetch news from VNExpress RSS.</span>
                                     </figcaption>
                                 </figure>
                             </a>
@@ -690,7 +690,7 @@
                                     <img src="images/works/work-5.png" alt="">                       
                                     <figcaption>
                                         <span class="title"><b>Education Management System</b></span><br/>
-                                        <span class="info">Using Winform C#.</span>
+                                        <span class="info">Using Windows Forms C#.</span>
                                     </figcaption>
                                 </figure>
                             </a>
@@ -728,7 +728,7 @@
                     </section>
                     <!-- Contact Map -->
                     <section class="contact-map col-md-12 top_15 bottom_15">
-                        <div class="section-title bottom_30"><span></span><h2>Contact Map.</h2></div>  
+                        <div class="section-title bottom_30"><span></span><h2>Contact Map</h2></div>  
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14897.491756459662!2d105.77822562957704!3d21.017758726067765!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ab0bf969acc7%3A0x5c1dcc77c7244bfe!2sFPT%20Tower!5e0!3m2!1sen!2s!4v1690599476140!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </section>
                 </div>
